tests/component_syntax_unsupported/component_syntax_unsupported.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:1

Component syntax is not enabled. You may opt-in to using component syntax by putting `component_syntax=true` into the
`[options]` section of your `.flowconfig`. [unsupported-syntax]

   1| component Comp() {} // error: unsupported
      ^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `3` to `React.FragmentType` because number [1] is incompatible with component Fragment [2].
[incompatible-cast]

   test.js:4:2
     4| (3: React$FragmentType); // ERROR
         ^ [1]

References:
   <BUILTINS>/react.js:743:5
            v------------------------------------------------------
   743|     declare component Fragment<Renders: React$Node = void>(
   744|       children?: Renders,
   745|     ) renders Renders;
            -----------------^ [2]



Found 2 errors
